src/main/amp/web/scripts/vieweditor/styles/styles.css
/* ... */
.navbar-inverse .navbar-brand {
	color: #fff;
	opacity: 0.85;
	font-size: 1.5em;
}

.navbar-inverse .navbar-nav > li > a {
	color: #fff;
	opacity: 0.85;	
}

.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-brand:hover {
  opacity: 1;
}

h1 {
	font-weight: normal;
}

.page, .page-sections section {
	background: #fff;
	outline: 0;
	box-shadow: 0 0 5px #ddd;
	padding: 20px;
}

.page-sections section {
	margin-bottom: 20px;
}

.page :first-child {
	margin-top: 0;
}

.scroll-page {
	overflow:auto;
	height:80%;
}

.inspector {
	border-bottom: 1px solid #ddd;
}

.inspector:last-child {
	border-bottom: none;
}

/* sidebar */
/* All levels of nav */
.bs-sidebar .nav > li > a {
  display: block;
  color: #716b7a;
  padding: 5px 20px;
}
.bs-sidebar .nav > li > a:hover,
.bs-sidebar .nav > li > a:focus {
  text-decoration: none;
  background-color: #e5e3e9;
  border-right: 1px solid #dbd8e0;
}
.bs-sidebar .nav > .active > a,
.bs-sidebar .nav > .active:hover > a,
.bs-sidebar .nav > .active:focus > a {
  font-weight: bold;
  color: #563d7c;
  background-color: transparent;
  border-right: 1px solid #563d7c;
}

/* Nav: second level (shown on .active) */
.bs-sidebar .nav .nav {
  margin-bottom: 8px;
}
.bs-sidebar .nav .nav > li > a {
  padding-top:    3px;
  padding-bottom: 3px;
  padding-left: 30px;
  font-size: 90%;
}

#toc {
	margin: 0;
	width: auto;
	border: none;
	border-radius: 0;
	border-right: 1px solid #ddd;
	position: inherit;
}

#toc .item {
	padding-right: 15px;
}

#toc .active {
	font-weight: bold;
}

#toc .active a {
	color: blue;
}

.inspector #toc {
	border: none;
}

.inspector {
  margin-bottom: 20px;
  padding: 5px;
  z-index: 100;
}

.inspector:last-child, .toggled-inspectors .inspector {
  margin-bottom: 0;
}

.inspector h3 {
  margin-top: 0;
  font-size: 14px;
  color: #666;
}

.split-view .inspector {
	border: none;
}

.split-view .inspector h3 {
	display: none;
}

/*.section-actions {
	margin-top: 5px;
	position: relative;
	right: 5px;
	opacity: 0;
}
*/

.section-wrapper {
	margin-bottom: 15px;
}

/*.section-wrapper:hover .section-actions {
	opacity: 0.4;
}
*/

/*.section-wrapper:hover .section-actions:hover {
	opacity: 0.9;
}
*/
.section.page {
	/*opacity: 0.8;*/
	box-shadow: 0 0 5px #eee;
}

.section.page:hover {
	opacity: 1;
	box-shadow: 0 0 5px #ddd;
}

.panel.inspectors {
  width: 25%;
}

.memo-status {
  font-size: 1em;
  position: relative;
  right: 20px;
  border-radius: 0;
  font-weight: normal;
}

.europa-icon {
  height: 45px;
  padding: 5px;
}

#workspace-selector {
  opacity: 0.8;
  background: rgba(255,255,255, 0.5);
  border-color: rgba(255,255,255, 0.2);
}

#workspace-selector:hover {
  opacity: 0.8;
  background: #fff;
  border-color: #fff;
}

.inspector .description {
  border-top: 1px dotted #ccc;
  padding-top: 15px;
}

.monospace {
  font-family: 'Courier New',monospace;
}

/*.inline-ref, .reference {
  border-bottom: 2px solid #bada55;
}
*/
.reference {
  display: inline;
}

[data-rich-data-type] {
  /*cursor: pointer;*/
}
[data-rich-data-type="reference"], .rich-reference {
  display: inline-block;
}

.inline-editor {
  background: #f3f3f3;
  border: 1px solid #ddd;
  border-radius: 10px;
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
  margin: 10px 0;
  padding: 15px;
}

.comment-info {
  color: #999;
}

.placeholder {
  color: #aaa;
}

.comment-editor {
  margin-top: 10px;
  height: auto;
}

[data-property=documentation].editable, [data-property=documentation].editable.reference * {
	/*background: #F0F0F0;*/
	/*border-bottom: 1px solid green;*/
}

[data-property=name].editable, [data-property=name].editable.reference * {
	/*background: #E6E6FA;*/
	border-bottom: 1px solid #E099FF;
}

[data-property=value].editable, [data-property=value].editable.reference * {
	/*background: lightgreen;*/
	border-bottom: 1px solid #E099FF;
}
/*
.editable.reference:empty
{
	padding-left: 10px;
}
*/
.editable.reference:empty:after {
	color: #aaa;
	content: "no content";
}

.editable.reference p.pwrapper:empty:after {
	color: #aaa;
	content: "no content";
}

.not-editable.reference {
  background: blue;
}

.blank.editable.reference {
  min-width: 100px;
  color: #aaa;
  padding: 0 5px;
}

.author, .modified {
  display: inline-block;
  margin-bottom: 10px;
  color: #aaa;
}

.author:after {
  content:", ";
}

.section.page img {
  max-width: 100%;
}

#top-alert {
  position: fixed;
  width: 100%;
  z-index: 100;
  margin-top: -10px;
  box-shadow: 0 0 5px rgba(0,0,0, .2);
}

.manualtable table,th,td
{
	border:1px solid black;
	padding: 2px;
}


.missing {
  color: red;
}

.mini-toolbar {
  background: #f1f1f1 !important;
  padding: 5px;
}
.mini-toolbar button {
  background: #fff !important;
}


.transclusionList .items
{
	height:600px;
	/*overflow-y: scroll;*/
}
.transclusionList .items>div
{
	cursor: pointer;
	position: relative;
	margin-bottom: 10px;
}
.transclusionList .items>div:hover
{
	background:#fafafa;
}
.transclusionList .items>div .body>*
{
	padding:10px;
}
.transclusionList .body
{
	padding: 5px;
}
.transclusionList .items>div .body>*:hover
{
	background:#eee;
}
.transclusionList .items>div .qualifiedName
{
	color:#aaa;
	font-size: 12px;
	height: 0;
	position: absolute;
	padding-left: 2px;
	top:4px;
	z-index: 2;
}

/* transclusion type display */
.transclusionList .items>div .name:hover:after,.transclusionList .items>div .documentation:hover:after,.transclusionList .items>div .dvalue:hover:after
{
	position: absolute;
	top:6px;
	right: 10px;
	font-size: 12px;
	font-weight: normal;
	color: #aaa;
}
.transclusionList .items>div .name:hover:after
{
	content: "name";
}
.transclusionList .items>div .documentation:hover:after
{
	content: "documentation";
}
.transclusionList .items>div .dvalue:hover:after
{
	content: "value";
}


.transclusionList .items>div .name
{
	margin-bottom: 0;
	padding-top: 15px;
	padding-left: 2px;
	font-size: 15px;
	font-weight: bold;
	text-transform: capitalize;
	color:#666;
}
/* ... */

